Pin galp, recent version have conflicts

--- a/setup.cfg
+++ b/setup.cfg
@@ -6,6 +6,6 @@ version = 0.0.dev1
 packages =
     gemz_galp
 install_requires =
-    galp @ git+ssh://git@github.com/emorice/galp.git
+    galp @ git+ssh://git@github.com/emorice/galp.git@403be067b3b3c52d31fd1c7a48dc7ad55869d3f8
     
     
