Upstream galp fix

--- a/setup.cfg
+++ b/setup.cfg
@@ -6,6 +6,6 @@ version = 0.0.dev1
 packages =
     gemz_galp
 install_requires =
-    galp @ git+ssh://git@github.com/emorice/galp.git@d71278b
+    galp @ git+ssh://git@github.com/emorice/galp.git
     
     
