--- a/setup.cfg
+++ b/setup.cfg
@@ -7,5 +7,8 @@ packages =
     gemz_galp
 install_requires =
     galp @ git+ssh://git@github.com/emorice/galp.git
-    
-    
+
+[options.extras_require]
+test =
+    pytest
+    pytest-asyncio
